fixed overflow issues!

--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@ a:hover{
 footer{
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     flex-wrap: wrap;
     height:125px;
     border-top: 1px solid black;
@@ -74,7 +74,8 @@ footer p{
     margin-top:180px;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
+    
 }
 .intro{
     display: flex;
@@ -104,33 +105,17 @@ footer p{
     margin-bottom: 80px;
     text-align: center;
 }
-.latest-work{
-    width: 100vw;
-}
 .latest-work-card{
     display: flex;
-    max-width: 100%;
-    max-height: 550px;
+    height: 550px;
     padding: 0 20px;
-    margin: 0 auto;
+    justify-content: center;
     margin-bottom: 120px;
+}
 
-    background-color: lightblue;
-}
-.latest-work-card > *{
-    width: 50%;
-    border: 1px solid red;
-}
 .lw-text{
+    width: 50%;
     line-height: 125%;
-    margin-right: 60px;
-}
-.lw-img{
-    background:palegreen;
-}
-.lw-img img{
-    /* max-height: 100%; */
-    max-width: 100%;
 }
 .lw-text p:first-of-type{
     margin-top: 15px;
@@ -217,7 +202,6 @@ footer p{
     flex-direction: column;
     margin:120px 0;
     width: 100%;
-    background-color: lightpink;
     align-items: center;
 }
 .contact .section-header{
@@ -250,7 +234,7 @@ form input[type=submit]{
 }
 form input[type=text]{
     border-bottom: 1px solid black;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 form textarea{
     margin: 0 0 30px 0;
